--- a/r-base/Dockerfile
+++ b/r-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM statwonk/utilities
+FROM dockr:utilities
 
 MAINTAINER "Christopher Peters" cpeter9@gmail.com
 
@@ -17,14 +17,14 @@ RUN echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 
-ENV R_BASE_VERSION 3.2.1
+ENV R_BASE_VERSION 3.0.2-1ubuntu1
 
 ## Set a default CRAN repo
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends \
-		r-base=${R_BASE_VERSION}* \
-		r-base-dev=${R_BASE_VERSION}* \
-		r-recommended=${R_BASE_VERSION}* \
+		r-base=${R_BASE_VERSION} \
+		r-base-dev=${R_BASE_VERSION} \
+		r-recommended=${R_BASE_VERSION} \
         && echo 'options(repos = list(CRAN = "http://cran.rstudio.com/"))' >> /etc/R/Rprofile.site \
 	&& rm -rf /var/lib/apt/lists/*
 
