--- a/utilities/Dockerfile
+++ b/utilities/Dockerfile
@@ -1,9 +1,10 @@
 FROM ubuntu:14.04
 MAINTAINER Christopher Peters "cpeter9@gmail.com"
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
     git \
     sudo \
-    vim
+    vim \
+    wget
